--- a/index.html
+++ b/index.html
@@ -2,204 +2,179 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Neuron Network Website</title>
+  <title>Dr. [Your Name] - Assistant Professor</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <style>
-    html, body {
-      height: 100%;
+    body {
       margin: 0;
-      padding: 0;
-      background: #181c24;
-      overflow: hidden;
       font-family: 'Segoe UI', Arial, sans-serif;
+      background: #f7f9fb;
+      color: #1a1a1a;
     }
-    #neuron-canvas {
-      display: block;
-      width: 100vw;
-      height: 100vh;
-      background: radial-gradient(ellipse at center, #23283a 0%, #181c24 100%);
-    }
-    .popup {
-      position: fixed;
-      top: 50%;
-      left: 50%;
-      transform: translate(-50%, -50%);
-      background: rgba(30, 34, 44, 0.98);
-      border-radius: 18px;
-      box-shadow: 0 8px 32px rgba(0,0,0,0.4);
-      padding: 32px 40px;
-      z-index: 1000;
-      min-width: 260px;
-      min-height: 180px;
+    header {
+      background: linear-gradient(90deg, #23283a 60%, #00ffe7 100%);
       color: #fff;
-      display: none;
+      padding: 40px 0 30px 0;
+      text-align: center;
     }
-    .popup h2 {
-      margin-top: 0;
-      font-size: 1.4em;
-      color: #00ffe7;
+    header h1 {
+      margin: 0;
+      font-size: 2.7em;
+      letter-spacing: 1px;
     }
-    .popup ul {
-      list-style: none;
-      padding: 0;
-      margin: 18px 0 0 0;
+    header h2 {
+      margin: 10px 0 0 0;
+      font-weight: 400;
+      font-size: 1.3em;
+      color: #bafff8;
     }
-    .popup ul li {
-      margin: 12px 0;
+    nav {
+      background: #23283a;
+      display: flex;
+      justify-content: center;
+      gap: 40px;
+      padding: 16px 0;
       font-size: 1.1em;
-      padding-left: 0.5em;
-      position: relative;
     }
-    .popup ul li:before {
-      content: '';
-      display: inline-block;
-      width: 8px;
-      height: 8px;
-      background: #00ffe7;
-      border-radius: 50%;
-      margin-right: 12px;
-      vertical-align: middle;
-      box-shadow: 0 0 8px #00ffe7;
+    nav a {
+      color: #fff;
+      text-decoration: none;
+      font-weight: 500;
+      transition: color 0.2s;
     }
-    .close-btn {
-      position: absolute;
-      top: 12px;
-      right: 18px;
-      background: none;
-      border: none;
+    nav a:hover {
       color: #00ffe7;
+    }
+    section {
+      max-width: 900px;
+      margin: 40px auto;
+      background: #fff;
+      border-radius: 14px;
+      box-shadow: 0 4px 24px rgba(30,40,60,0.09);
+      padding: 36px 30px;
+    }
+    h3 {
+      margin-top: 0;
+      color: #23283a;
       font-size: 1.5em;
-      cursor: pointer;
+      border-left: 4px solid #00ffe7;
+      padding-left: 12px;
+      margin-bottom: 18px;
     }
-    .close-btn:hover {
-      color: #ff3c6f;
+    .profile-img {
+      float: right;
+      margin-left: 30px;
+      margin-bottom: 20px;
+      border-radius: 50%;
+      width: 130px;
+      height: 130px;
+      object-fit: cover;
+      border: 4px solid #00ffe7;
+      box-shadow: 0 2px 12px rgba(0,255,231,0.09);
     }
-    @media (max-width: 600px) {
-      .popup {
-        padding: 18px 10px;
-        min-width: 160px;
-      }
+    ul {
+      padding-left: 22px;
+    }
+    .cards {
+      display: flex;
+      flex-wrap: wrap;
+      gap: 24px;
+      margin-top: 12px;
+    }
+    .card {
+      flex: 1 1 240px;
+      background: #f3f7fa;
+      border-radius: 10px;
+      box-shadow: 0 2px 8px rgba(0,255,231,0.07);
+      padding: 18px 20px;
+      min-width: 220px;
+      margin-bottom: 14px;
+    }
+    @media (max-width: 700px) {
+      section { padding: 18px 6px; }
+      .cards { flex-direction: column; }
+      .profile-img { float: none; display: block; margin: 0 auto 20px auto; }
+    }
+    footer {
+      text-align: center;
+      padding: 22px 0;
+      color: #5fcfc3;
+      background: #23283a;
+      margin-top: 40px;
+      font-size: 1em;
+      letter-spacing: 1px;
     }
   </style>
 </head>
 <body>
-  <canvas id="neuron-canvas"></canvas>
-  <div class="popup" id="popup">
-    <button class="close-btn" onclick="closePopup()" aria-label="Close">&times;</button>
-    <h2>Neuron Sections</h2>
+  <header>
+    <h1>Dr. [Your Name]</h1>
+    <h2>Assistant Professor, [Your Department], [Your University]</h2>
+  </header>
+  <nav>
+    <a href="#about">About Me</a>
+    <a href="#education">Education</a>
+    <a href="#research">Research</a>
+    <a href="#teaching">Teaching</a>
+    <a href="#contact">Contact</a>
+  </nav>
+  <section id="about">
+    <img src="https://randomuser.me/api/portraits/men/32.jpg" class="profile-img" alt="Profile photo">
+    <h3>About Me</h3>
+    <p>
+      Driven by curiosity and a passion for discovery, I am an Assistant Professor at [Your University] specializing in [Your Field]. My work bridges rigorous research, innovative teaching, and active mentorship. I am committed to fostering a learning environment that inspires students and advances knowledge in my discipline.
+    </p>
+  </section>
+  <section id="education">
+    <h3>Education</h3>
+    <div class="cards">
+      <div class="card">
+        <strong>Ph.D. in [Your Major]</strong><br>
+        [Your University], [Year]<br>
+        <small>Thesis: [Your Thesis Title]</small>
+      </div>
+      <div class="card">
+        <strong>M.S. in [Your Major]</strong><br>
+        [Your University], [Year]
+      </div>
+      <div class="card">
+        <strong>B.S. in [Your Major]</strong><br>
+        [Your University], [Year]
+      </div>
+    </div>
+  </section>
+  <section id="research">
+    <h3>Research</h3>
     <ul>
-      <li>About Me</li>
-      <li>Education</li>
-      <li>Research</li>
-      <li>Teaching</li>
+      <li><strong>Focus Areas:</strong> [e.g., Machine Learning, Data Science, Cognitive Neuroscience]</li>
+      <li><strong>Key Projects:</strong> [Project Title] – [Brief description]</li>
+      <li><strong>Recent Publications:</strong>
+        <ul>
+          <li>[Author], "[Paper Title]," <em>Journal Name</em>, Year.</li>
+          <li>[Author], "[Paper Title]," <em>Journal Name</em>, Year.</li>
+        </ul>
+      </li>
+      <li><strong>Grants & Awards:</strong> [Award/Grant Name], [Year]</li>
     </ul>
-  </div>
-  <script>
-    // Neuron data
-    const neurons = [
-      { x: 0.3, y: 0.3 },
-      { x: 0.5, y: 0.2 },
-      { x: 0.7, y: 0.35 },
-      { x: 0.4, y: 0.6 },
-      { x: 0.6, y: 0.65 },
-      { x: 0.8, y: 0.5 },
-      { x: 0.2, y: 0.6 },
-      { x: 0.9, y: 0.3 }
-    ];
-    const connections = [
-      [0,1],[1,2],[0,3],[1,3],[2,4],[3,4],[4,5],[2,5],[0,6],[6,3],[2,7],[5,7]
-    ];
-    let canvas, ctx, width, height, neuronRadius = 22;
-
-    function resizeCanvas() {
-      canvas.width = window.innerWidth;
-      canvas.height = window.innerHeight;
-      width = canvas.width;
-      height = canvas.height;
-    }
-
-    function drawNetwork() {
-      ctx.clearRect(0, 0, width, height);
-      // Draw connections
-      ctx.save();
-      ctx.strokeStyle = "#00ffe7";
-      ctx.globalAlpha = 0.25;
-      ctx.lineWidth = 2.5;
-      connections.forEach(([a, b]) => {
-        const n1 = neurons[a], n2 = neurons[b];
-        ctx.beginPath();
-        ctx.moveTo(n1.x * width, n1.y * height);
-        ctx.lineTo(n2.x * width, n2.y * height);
-        ctx.stroke();
-      });
-      ctx.restore();
-      // Draw neurons
-      neurons.forEach(n => {
-        // Outer glow
-        ctx.save();
-        ctx.shadowColor = "#00ffe7";
-        ctx.shadowBlur = 16;
-        ctx.beginPath();
-        ctx.arc(n.x * width, n.y * height, neuronRadius, 0, 2 * Math.PI);
-        ctx.fillStyle = "#23283a";
-        ctx.fill();
-        ctx.restore();
-        // Border
-        ctx.beginPath();
-        ctx.arc(n.x * width, n.y * height, neuronRadius, 0, 2 * Math.PI);
-        ctx.strokeStyle = "#00ffe7";
-        ctx.lineWidth = 3;
-        ctx.stroke();
-        // Inner dot
-        ctx.beginPath();
-        ctx.arc(n.x * width, n.y * height, 8, 0, 2 * Math.PI);
-        ctx.fillStyle = "#00ffe7";
-        ctx.globalAlpha = 0.85;
-        ctx.fill();
-        ctx.globalAlpha = 1.0;
-      });
-    }
-
-    function getNeuronAt(x, y) {
-      for (let i = 0; i < neurons.length; i++) {
-        const n = neurons[i];
-        const dx = x - n.x * width;
-        const dy = y - n.y * height;
-        if (dx*dx + dy*dy < neuronRadius*neuronRadius) return i;
-      }
-      return -1;
-    }
-
-    function openPopup() {
-      document.getElementById('popup').style.display = 'block';
-    }
-    function closePopup() {
-      document.getElementById('popup').style.display = 'none';
-    }
-
-    // Event listeners
-    window.addEventListener('resize', () => {
-      resizeCanvas();
-      drawNetwork();
-    });
-
-    window.addEventListener('DOMContentLoaded', () => {
-      canvas = document.getElementById('neuron-canvas');
-      ctx = canvas.getContext('2d');
-      resizeCanvas();
-      drawNetwork();
-      canvas.addEventListener('click', function(e) {
-        const rect = canvas.getBoundingClientRect();
-        const x = e.clientX - rect.left;
-        const y = e.clientY - rect.top;
-        if (getNeuronAt(x, y) !== -1) openPopup();
-      });
-    });
-
-    document.addEventListener('keydown', (e) => {
-      if (e.key === 'Escape') closePopup();
-    });
-    window.closePopup = closePopup;
-  </script>
+  </section>
+  <section id="teaching">
+    <h3>Teaching</h3>
+    <ul>
+      <li><strong>Courses Taught:</strong> [Course Name 1], [Course Name 2], [Course Name 3]</li>
+      <li><strong>Teaching Philosophy:</strong> I believe in interactive, student-centered learning that blends theory with real-world application. My goal is to ignite critical thinking and lifelong curiosity.</li>
+      <li><strong>Mentorship:</strong> Guided [number] undergraduate and graduate students in research and career development.</li>
+    </ul>
+  </section>
+  <section id="contact">
+    <h3>Contact</h3>
+    <p>
+      <strong>Email:</strong> <a href="mailto:your.email@university.edu">your.email@university.edu</a><br>
+      <strong>Office:</strong> [Building, Room Number], [University Name]<br>
+      <strong>LinkedIn:</strong> <a href="https://linkedin.com/in/yourprofile" target="_blank">yourprofile</a>
+    </p>
+  </section>
+  <footer>
+    &copy; 2025 Dr. [Your Name] | Assistant Professor | [Your University]
+  </footer>
 </body>
 </html>
